@@ -5,9 +5,13 @@ Change history for Coverage.py
 Version 3.3.1
 -------------
 
+- Using `parallel=True` in .coveragerc file prevented reporting, but now does
+  not, fixing `issue 49`.
+
 - When running your code with "coverage run", if you call `sys.exit()`,
   coverage.py will exit with that status code, fixing `issue 50`.
-  
+
+.. _issue 49: http://bitbucket.org/ned/coveragepy/issue/49
 .. _issue 50: http://bitbucket.org/ned/coveragepy/issue/50
 
 
